steam app image ratio on mobile fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -10903,14 +10903,7 @@ header.masthead .masthead-content .masthead-subheading {
   }
 }
 
-.steam-app-container {
-  max-width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: center;
-}
-.steam-app-container steam-app {
-  width: 100%;
-  max-height: 100%;
-  object-fit: contain;
+.parent-steam-app .steam-app-image {
+  background-size: contain;
+  background-repeat: no-repeat;
 }
